--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,10 @@
           <div>
             Logged in as <%= current_user.email %> |
             <%= link_to 'Dashboard', dashboard_path, class: "text-blue-500 hover:underline" %> |
-            <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: "text-red-500 hover:underline" %>
+            <% if current_user.admin? %>
+              <%= link_to 'Admin', admin_dashboard_path, class: "text-purple-600 hover:underline" %> |
+            <% end %>
+            <%= button_to 'Sign out', destroy_user_session_path, method: :delete, class: "text-red-500 hover:underline bg-transparent border-0 cursor-pointer p-0", form: { class: "inline" } %>
           </div>
         <% else %>
           <%= link_to 'Sign in', new_user_session_path, class: "text-blue-500 hover:underline" %>
