--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,12 @@
         <h1 class="text-xl font-bold">gold-saas-bp</h1>
         <% if user_signed_in? %>
           <div>
-            Logged in as <%= current_user.email %> |
+            Logged in as <%= current_user.display_name %> |
             <%= link_to 'Dashboard', dashboard_path, class: "text-blue-500 hover:underline" %> |
+            <%= link_to 'Profile', users_profile_path, class: "text-blue-500 hover:underline" %> |
+            <%= link_to 'Notifications', users_preferences_path, class: "text-blue-500 hover:underline" %> |
+            <%= link_to 'Usage', users_usage_path, class: "text-blue-500 hover:underline" %> |
+            <%= link_to 'Account', users_account_path, class: "text-blue-500 hover:underline" %> |
             <% if current_user.admin? %>
               <%= link_to 'Admin', admin_dashboard_path, class: "text-purple-600 hover:underline" %> |
             <% end %>
